fix task list gap styling

--- a/src/styles/Task.css
+++ b/src/styles/Task.css
@@ -33,10 +33,6 @@
   cursor: auto;
 }
 
-.Task:last-of-type {
-  border-bottom: none;
-}
-
 .Task.editing form {
   height: 100%;
   width: 100%;
@@ -99,7 +95,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 37px;
 }
 
 .Task > div.taskAttr > div {
